# pyscotch

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUESTIONS_FOR_SCOTCH_TEAM.md  README.md  ROADMAP.md  TEST_RESULTS.md  TODO_TODO_TODO_AVAILABLE_MPI_TESTS.md  pyproject.toml  setup.py
.github/workflows/: test.yml
benchmarks/: README.md  benchmark_distributed_operations.py  benchmark_sequential_partitioning.py
docs/: API.md  COLORING_BUG_RESOLUTION.md  QUESTIONS_FOR_SCOTCH_TEAM.md  QUESTIONS_FOR_SCOTCH_TEAM_2.md  SAVED_CONTEXT_FOR_NEXT_FP.md  STRATEGY_DESIGN.md
examples/: README.md  distributed_coarsening.py  graph_ordering.py  mesh_partitioning.py  simple_partition.py
patches/: Makefile.inc.default  README.md  scotch-suffix-fixes.patch
pyscotch/: __init__.py  api_decorators.py  arch.py  cli.py  context.py  dgraph.py  geom.py  graph.py  libscotch.py  mapping.py  mesh.py  mpi.py  ordering.py  strategy.py
pyscotch/native/: file_compat.c
tests/: README.md  __init__.py  conftest.py  test_graph.py  test_int_sizes.py  test_scotch_compat.py
tests/hypothesis/: README.md  test_graph_properties.py
tests/integration/: mesh_partitioning_workflow.py  sequential_partitioning_workflow.py
tests/pyscotch_base/: conftest.py  test_api_completeness.py  test_architecture.py  test_context.py  test_custom_strategies.py  test_geometry.py  test_graph_advanced.py  test_graph_coarsen.py  test_int_sizes.py  test_mapping_ordering.py  test_mesh_advanced.py  test_module_functions.py  test_multivariant_parametrized.py  test_random_enhanced.py  (+3 more)
(+43 files in other folders)
