[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscotch"
version = "0.1.0"
description = "Python wrapper for PT-Scotch graph partitioning library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "c4ffein"}
]
keywords = ["graph", "partitioning", "scotch", "pt-scotch", "mesh", "ordering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/c4ffein/pyscotch"
Documentation = "https://github.com/c4ffein/pyscotch"
Repository = "https://github.com/c4ffein/pyscotch"

[project.scripts]
pyscotch = "pyscotch.cli:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
